  - lms-notify: added messages log support, added options to send notifies
    about new invoice and paytime overdo, removed mailtemplate and mailsubject
    option, added *_template and *_subject options (alec)
  - added creation date filter on documents list (alec)
  - fixed networks selection in customergroup forms (chilan)

version 1.11.7 Bastet (2009-02-13):

  - fixed calculation of netto value and united tax value calculation method (chilan)
  - re-fixed table locking on mysql (alec)
  - fixed divisions table definition for postgres (alec)
  - BTS#0000784: fixed pagesize setting for pdf printouts (alec)

version 1.11.6 Olokun (2009-02-10):

  - added option phpui/invoice_check_payment to add payment operation
    when checking invoice as payed (alec)
  - balance sheet: added 'with/without document' and date filters (zet/alec)
  - balance sheet report: added 'with/without document' filter (zet/alec)
  - updated lithuanian translation (etanetas/chilan)
  - mailing: added link type and node group filters (alec)
  - BTS#0000783: fix LOCK TABLES use in mysql drivers (alec)
  - lmsd: fix last_insert_id in postgresql drivers (alec)

version 1.11.5 Ishkur (2009-01-24):

  - changed Smarty's homepage address to http://www.smarty.net (alec)
  - added Configuration -> States and possibility to search customers
    by country state in Customers/Search and filter them in 
    Customers/Reports/Customers List (alec)
  - in short customer nodes list added possibility to change node's 
    warning flag and status (alec)
  - in short customer nodes list added online status icon 
    with status title (alec)
  - helpdesk: in tickets list added short nodes list popup (alec)
  - helpdesk: in ticket view added requestor's nodes list (alec)
  - trafficdbcompact: fixed warnings appearing where there are nodes without
    stats data (chilan)
  - userpanel: added lost helpdeskreply.html template (alec)
  - lms-sendinvoices: fixed SQL query (alec)